<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E7E7">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="188dp"
        android:layout_height="169dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/star"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="95dp"
        android:layout_height="101dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/star"
        android:rotation="180"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="206dp"
        android:layout_height="204dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/star"
        android:rotation="270"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.544" />

    <ImageView
        android:id="@+id/star_4"
        android:layout_width="181dp"
        android:layout_height="161dp"
        android:contentDescription="@string/star"
        android:rotation="90"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/star_5"
        android:layout_width="119dp"
        android:layout_height="122dp"
        android:contentDescription="@string/star"
        android:rotation="90"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <ImageView
        android:id="@+id/star_6"
        android:layout_width="172dp"
        android:layout_height="123dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/star"
        android:rotation="90"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />

    <ImageView
        android:id="@+id/star_7"
        android:layout_width="202dp"
        android:layout_height="189dp"
        android:contentDescription="@string/star"
        android:rotation="45"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <ImageView
        android:id="@+id/star_8"
        android:layout_width="181dp"
        android:layout_height="161dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/star"
        android:rotation="220"
        android:src="@drawable/star_kids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A9FFFFFF"
        android:gravity="center"
        android:text="@string/resultText"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <ImageButton
        android:id="@+id/playAgainBtn"
        android:layout_width="179dp"
        android:layout_height="182dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="172dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/play_button"
        android:scaleType="centerInside"
        android:src="@drawable/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>